api update routing key
