# app/schema/routing.go
@@ -11,7 +11,7 @@ type RoutingQueryParam struct {
 type RoutingCreateParam struct {
 	Name      string `json:"name,omitempty" validate:"required"`
 	Group     string `json:"group,omitempty" validate:"required"`
-	Value     uint   `json:"value,omitempty" validate:"required"`
+	Value     uint   `json:"value,omitempty" validate:"required,gt=0"`
 	APIMethod string `json:"api_method,omitempty" validate:"required,oneof=GET POST PUT DELETE PATCH"`
 	APIUrl    string `json:"api_url,omitempty" validate:"required,url"`
 }
@@ -19,7 +19,7 @@ type RoutingCreateParam struct {
 type RoutingUpdateParam struct {
 	Name      string `json:"name,omitempty"`
 	Group     string `json:"group,omitempty"`
-	Value     uint   `json:"value,omitempty"`
-	APIMethod string `json:"api_method,omitempty" validate:"oneof=GET POST PUT DELETE PATCH"`
-	APIUrl    string `json:"api_url,omitempty" validate:"url"`
+	Value     uint   `json:"value,omitempty" validate:"gt=0"`
+	APIMethod string `json:"api_method,omitempty" validate:"omitempty,oneof=GET POST PUT DELETE PATCH"`
+	APIUrl    string `json:"api_url,omitempty" validate:"omitempty,url"`
 }
