# docs/swagger.yaml
@@ -53,6 +53,19 @@ definitions:
       value:
         type: integer
     type: object
+  schema.RoutingUpdateParam:
+    properties:
+      api_method:
+        type: string
+      api_url:
+        type: string
+      group:
+        type: string
+      name:
+        type: string
+      value:
+        type: integer
+    type: object
 info:
   contact: {}
   license: {}
@@ -197,6 +210,34 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: api retrieve routing key
+      tags:
+      - Routing Keys
+    put:
+      consumes:
+      - application/json
+      description: api update routing key
+      parameters:
+      - description: Routing Key ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Body
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/schema.RoutingUpdateParam'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: api update routing key
       tags:
       - Routing Keys
 swagger: "2.0"
